section css  düzeltme
section css  düzeltme öncesi(elle yazılmıştı) + reboot edilmiş hali

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <img src="ilk_projem/assets/icon/logo.svg" alt="logo" />
                 </a>
               </div>
-              <div class="column">
+              <div class="column relative">
                 <nav class="navigation">
                   <ul class="navigation-list">
                     <li class="navigation-item">
@@ -50,7 +50,6 @@
         </div>
       </div>
     </header>
-    <main>
     <section class="hero-seciton">
       <div class="container-large relative">
         <div class="hero-content">
@@ -64,6 +63,5 @@
       </div>
       
     </section>
-    </main>
   </body>
 </html>
