--- a/index.html
+++ b/index.html
@@ -54,14 +54,17 @@
       <div class="container-large relative">
         <div class="hero-content">
           <h1>Save your data storage here.</h1>
-          <p>Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others.</p>
+          <p>
+            Data Warehouse is a data storage area that has been tested for
+            security, so you can store your data here safely but not be afraid
+            of being stolen by others.
+          </p>
           <a href="#" class="button purple-button">Learn more</a>
         </div>
         <div class="hero-image text-right">
-          <img src="/ilk_projem/assets/img/hero-image.svg">
-        </div>  
+          <img src="/ilk_projem/assets/img/hero-image.svg" />
+        </div>
       </div>
-      
     </section>
   </body>
 </html>
