--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
       <div class="container-large relative">
         <div class="hero-content">
           <h1>Save your data storage here.</h1>
-          <p>
-            Data Warehouse is a data storage area that has been tested for
+          <p>Data Warehouse is a data storage area that has been tested for
             security, so you can store your data here safely but not be afraid
-            of being stolen by others.
-          </p>
+            of being stolen by others.</p>
           <a href="#" class="button purple-button">Learn more</a>
         </div>
         <div class="hero-image text-right">
