index problems solved
düzeltilmiş index

--- a/index.html
+++ b/index.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIGMA TO HTML</title>
-    <link rel="stylesheet" href="./ilk_projem/assets/css/style.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="./ilk_projem/assets/css/style.css">
+</head>
+<body>
+    
     <header class="header">
-      <div class="container">
-        <div class="row align-center justify-between">
-          <div class="column">
-            <div class="row align-center">
-              <div class="column">
-                <a href="/" class="logo" aria-label="logo" title="logo">
-                  <img src="ilk_projem/assets/icon/logo.svg" alt="logo" />
-                </a>
-              </div>
-              <div class="column relative">
-                <nav class="navigation">
-                  <ul class="navigation-list">
-                    <li class="navigation-item">
-                      <a href="#" class="navigation-link">About</a>
-                    </li>
-                    <li class="navigation-item">
-                      <a href="#" class="navigation-link">Help</a>
-                    </li>
-                    <li class="navigation-item">
-                      <a href="#" class="navigation-link">Features</a>
-                    </li>
-                    <li class="navigation-item">
-                      <a href="#" class="navigation-link">Sign Up</a>
-                    </li>
-                  </ul>
-                </nav>
-              </div>
+        <div class="container">
+            <div class="row align-center justify-between">
+                <div class="column">
+                    <div class="row align-center">
+                        <div class="column">
+                            <a href="/" class="logo" aria-label="logo" title="logo">
+                                <img src="ilk_projem/assets/icon/logo.svg" alt="Logo">
+                            </a>
+                        </div>
+                        <div class="column relative mobile-none">
+                            <nav class="navigation">
+                                <ul class="navigation-list">
+                                    <li class="navigation-item">
+                                        <a href="#" class="navigation-link">
+                                            About
+                                        </a>
+                                    </li>  
+                                    <li class="navigation-item">
+                                        <a href="#" class="navigation-link">Help</a>
+                                    </li>
+                                    <li class="navigation-item">
+                                        <a href="#" class="navigation-link">Features</a>
+                                    </li>
+                                    <li class="navigation-item">
+                                        <a href="#" class="navigation-link">Sign Up</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <a href="#" class="button icon-button white-button">
+                        <span>Request Demo</span>
+                        <i>
+                            <img src="ilk_projem/assets/icon/right-arrow-purple.svg">
+                        </i>
+                    </a>
+                </div>
             </div>
-          </div>
-
-          <div class="column">
-            <a href="#" class="button icon-button white-button">
-              <span>Request Demo</span>
-              <i>
-                <img src="ilk_projem/assets/icon/right-arrow-purple.svg" />
-              </i>
-            </a>
-          </div>
         </div>
-      </div>
     </header>
-    <section class="hero-seciton">
-      <div class="container-large relative">
-        <div class="hero-content">
-          <h1>Save your data storage here.</h1>
-          <p>Data Warehouse is a data storage area that has been tested for
-            security, so you can store your data here safely but not be afraid
-            of being stolen by others.</p>
-          <a href="#" class="button purple-button">Learn more</a>
-        </div>
-        <div class="hero-image text-right">
-          <img src="/ilk_projem/assets/img/hero-image.svg" />
-        </div>
-      </div>
-    </section>
+
+    <main>
+        <section class="hero-section">
+            <div class="container-large relative">
+                <div class="hero-content">
+                    <h1>Save your data storage here.</h1>
+                    <p>Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others.</p>
+                    <a href="#" class="button purple-button">Learn more</a>
+                </div>
+                <div class="hero-image text-right">
+                    <img src="/ilk_projem/assets/img/hero-image.svg">
+                </div>
+            </div>
+        </section>
   </body>
 </html>
