--- a/index.html
+++ b/index.html
@@ -62,9 +62,26 @@
                     <a href="#" class="button purple-button">Learn more</a>
                 </div>
                 <div class="hero-image text-right">
-                    <img src="/ilk_projem/assets/img/hero-image.svg">
+                    <img src="ilk_projem/assets/img/hero-image.svg">
                 </div>
             </div>
         </section>
+
+        <section class="pink-section">
+            <div class="container">
+               <div class="row align-center">
+                   <div class="column">
+                <img src="ilk_projem/assets/img/purple_image.svg" alt="We are a high-level data storage bank">
+                   </div>
+                   <div class="column flex-fill">
+                       <h2>We are a high-level data storage bank</h2>
+                       <p>The place to store various data that you can access at any time through the internet  and where you can carry it. 
+                        This very flexible storage area has a high level of security. To enter into your own data you must enter the password that you created when you registered in this Data Warehouse. </p>
+                   </div>
+               </div> 
+            </div>
+        </section>
+
+        <script type="text/javascript" src="ilk_projem/assets/js/app.js"></script>
   </body>
 </html>
