--- a/index.html
+++ b/index.html
@@ -189,13 +189,16 @@
             </div>
         </section>
         <section class="comments">
-            <div class="container">
+            <div class="container relative">
                 <div class="comments-background">
                     <h3 class="text-white font-size-40 font-weight-700 margin-bottom-80">Testimonials</h3>
                 
                 <div class="comment-slider">
                     <div class="comment-item active">
-                         <div class="comment-images">
+                        <div class="comment-item-containter">
+
+                        </div>
+                         <div class="comment-image">
                             <i><img src="/ilk_projem/assets/img/comment-image.svg" alt="Customer"></i>
                         </div>
 
@@ -207,18 +210,20 @@
                             </p>
                         </div>
                     </div>
-                    <div class="comment-item active">
-                        <div class="comment-images">
-                           <i><img src="/ilk_projem/assets/img/comment-image.svg" alt="Customer"></i>
-                       </div>
-
-                       <div class="comment-content">
-                           <h4>John Fang </h4>
-                           <a href="http://wordfaang.com">wordfaang.com</a>
-                           <p>Suspendisse ultrices at diam lectus nullam. 
-                               Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam laoreet nulla.
-                           </p>
-                       </div>
+                    <div class="comment-item ">
+                        <div class="comment-item-container">
+                            <div class="comment-image>
+                                <i><img src="/ilk_projem/assets/img/comment-image.svg" alt="Customer"></i>
+                            </div>
+     
+                            <div class="comment-content">
+                                <h4>John Fang </h4>
+                                <a href="http://wordfaang.com">wordfaang.com</a>
+                                <p>Suspendisse ultrices at diam lectus nullam. 
+                                    Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam laoreet nulla.
+                                </p>
+                            </div>
+                        </div>
                    </div>
                 </div>
                 </div>
