--- a/index.html
+++ b/index.html
@@ -308,13 +308,13 @@
         <footer class="footer">
             <div class="container">
                 <div class="row margin-bottom-150 justify-between">
-                    <div class="column">
+                    <div class="column mobile-margin-bottom">
                         <h3>Try for free!</h3>
                         <p>Get limited 1 week free try our features!</p>
                     </div>
-                    <div class="column">
-                        <div class="row">
-                            <div class="column">
+                    <div class="column mobile-margin-bottom">
+                        <div class="row mobile-justify-center">
+                            <div class="column mobile-margin-bottom">
                                 <button type="button" class="pink-button">
                                     Learn More
                                 </button>
@@ -334,22 +334,22 @@
                 </div>
 
                 <div class="row margin-bottom-95 justify-between">
-                    <div class="column">
+                    <div class="column mobile-margin-bottom">
                         
                         <a href="/" class="logo" aria-label="logo" title="logo">
                             <img src="ilk_projem/assets/img/footer-logo.svg" alt="logo">
                         </a>
-                        <address>
+                        <address class="mobile-margin-bottom">
                             Warehouse Society, 234 <br> Bahagia Ave Street PRBW 29281
                         </address>
-                        <a href="mailto:info@warehouse.project">
+                        <a href="mailto:info@warehouse.project" class="mobile-margin-bottom" >
                             info@warehouse.project
                         </a>
                         <a href="tel:1233434">1-232-3434</a>
                     </div>
-                    <div class="column">
+                    <div class="column mobile-margin-bottom">
                         <div class="row">
-                            <div class="column">
+                            <div class="column mobile-margin-bottom">
                                 <h4 class="footer-menu-title">About</h4>
                                 <ul class="footer-menu-list">
                                     <li class="footer-menu-item">
@@ -385,8 +385,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column">
-                        <h4>Social Media</h4>
+                    <div class="column mobile-margin-bottom">
+                        <h4 class="margin-bottom-30">Social Media</h4>
                         <ul class="social-media-list">
                             <li class="social-media-item">
                                 <a href="#" class="social-media-link">
@@ -403,8 +403,8 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="column">
+                <div class="row justify-between">
+                    <div class="column mobile-margin-bottom">
                         <p class="copyright">
                         © Datawarehouse™, 2020. All rights reserved.
                         <br />  Company Registration Number: 21479524.
